y.output
   0  $accept : program $end

   1  program :
   2          | program scalar_decl
   3          | program array_decl
   4          | program func_decl

   5  scalar_decl : type idents ';'

   6  type : CONST
   7       | CONST non_const
   8       | non_const

   9  non_const : SIGNED
  10            | UNSIGNED
  11            | FLOAT_TYPE
  12            | DOUBLE_TYPE
  13            | VOID_TYPE
  14            | SIGNED integer
  15            | UNSIGNED integer
  16            | integer

  17  integer : int_size INT_TYPE
  18          | INT_TYPE
  19          | int_size
  20          | CHAR_TYPE

  21  int_size : LONGLONG_TYPE
  22           | LONG_TYPE
  23           | SHORT_TYPE

  24  idents : single_ident
  25         | single_ident ',' idents

  26  single_ident : ident '=' expression
  27               | ident
  28               | '*' ident

  29  array_decl : type arrays ';'

  30  arrays : single_array
  31         | single_array ',' arrays

  32  single_array : ident array_shape
  33               | ident array_shape '=' arr_content

  34  array_shape : '[' expression ']'
  35              | '[' expression ']' array_shape

  36  arr_content : '{' list_contents '}'

  37  list_contents : arr_content ',' list_contents
  38                | expression ',' list_contents
  39                | arr_content
  40                | expression

  41  func_decl : type ident func_cfg ';'
  42            | type '*' ident func_cfg ';'

  43  func_cfg : '(' paras ')'
  44           | '(' ')'

  45  paras : type ident ',' paras
  46        | type '*' ident ',' paras
  47        | type ident
  48        | type '*' ident

  49  func_arg : '(' ')'
  50           | '(' args ')'

  51  args : expression ',' args
  52       | expression

  53  expression : expression '+' expression
  54             | expression '-' expression
  55             | expression '*' expression
  56             | expression '/' expression
  57             | expression '%' expression
  58             | expression '>' expression
  59             | expression '<' expression
  60             | expression GE expression
  61             | expression LE expression
  62             | expression EQ expression
  63             | expression NEQ expression
  64             | expression LAND expression
  65             | expression LOR expression
  66             | expression '|' expression
  67             | expression '^' expression
  68             | expression '&' expression
  69             | expression LSHIFT expression
  70             | expression RSHIFT expression
  71             | '+' expression
  72             | '-' expression
  73             | INC expression
  74             | DEC expression
  75             | expression INC
  76             | expression DEC
  77             | '*' expression
  78             | '&' ident
  79             | ident func_arg
  80             | ident array_shape
  81             | '(' type ')' expression
  82             | '!' expression
  83             | '~' expression
  84             | NUM
  85             | FLOAT
  86             | CHAR_LIT
  87             | STRING_LIT
  88             | ident
  89             | '(' expression ')'

state 0
	$accept : . program $end  (0)
	program : .  (1)

	.  reduce 1

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . scalar_decl  (2)
	program : program . array_decl  (3)
	program : program . func_decl  (4)

	$end  accept
	SHORT_TYPE  shift 2
	INT_TYPE  shift 3
	LONG_TYPE  shift 4
	LONGLONG_TYPE  shift 5
	FLOAT_TYPE  shift 6
	DOUBLE_TYPE  shift 7
	VOID_TYPE  shift 8
	CHAR_TYPE  shift 9
	CONST  shift 10
	SIGNED  shift 11
	UNSIGNED  shift 12
	.  error

	type  goto 13
	non_const  goto 14
	integer  goto 15
	int_size  goto 16
	scalar_decl  goto 17
	array_decl  goto 18
	func_decl  goto 19


state 2
	int_size : SHORT_TYPE .  (23)

	.  reduce 23


state 3
	integer : INT_TYPE .  (18)

	.  reduce 18


state 4
	int_size : LONG_TYPE .  (22)

	.  reduce 22


state 5
	int_size : LONGLONG_TYPE .  (21)

	.  reduce 21


state 6
	non_const : FLOAT_TYPE .  (11)

	.  reduce 11


state 7
	non_const : DOUBLE_TYPE .  (12)

	.  reduce 12


state 8
	non_const : VOID_TYPE .  (13)

	.  reduce 13


state 9
	integer : CHAR_TYPE .  (20)

	.  reduce 20


state 10
	type : CONST .  (6)
	type : CONST . non_const  (7)

	SHORT_TYPE  shift 2
	INT_TYPE  shift 3
	LONG_TYPE  shift 4
	LONGLONG_TYPE  shift 5
	FLOAT_TYPE  shift 6
	DOUBLE_TYPE  shift 7
	VOID_TYPE  shift 8
	CHAR_TYPE  shift 9
	SIGNED  shift 11
	UNSIGNED  shift 12
	ident  reduce 6
	'*'  reduce 6
	')'  reduce 6

	non_const  goto 20
	integer  goto 15
	int_size  goto 16


state 11
	non_const : SIGNED .  (9)
	non_const : SIGNED . integer  (14)

	SHORT_TYPE  shift 2
	INT_TYPE  shift 3
	LONG_TYPE  shift 4
	LONGLONG_TYPE  shift 5
	CHAR_TYPE  shift 9
	ident  reduce 9
	'*'  reduce 9
	')'  reduce 9

	integer  goto 21
	int_size  goto 16


state 12
	non_const : UNSIGNED .  (10)
	non_const : UNSIGNED . integer  (15)

	SHORT_TYPE  shift 2
	INT_TYPE  shift 3
	LONG_TYPE  shift 4
	LONGLONG_TYPE  shift 5
	CHAR_TYPE  shift 9
	ident  reduce 10
	'*'  reduce 10
	')'  reduce 10

	integer  goto 22
	int_size  goto 16


state 13
	scalar_decl : type . idents ';'  (5)
	array_decl : type . arrays ';'  (29)
	func_decl : type . ident func_cfg ';'  (41)
	func_decl : type . '*' ident func_cfg ';'  (42)

	ident  shift 23
	'*'  shift 24
	.  error

	idents  goto 25
	single_ident  goto 26
	arrays  goto 27
	single_array  goto 28


state 14
	type : non_const .  (8)

	.  reduce 8


state 15
	non_const : integer .  (16)

	.  reduce 16


state 16
	integer : int_size . INT_TYPE  (17)
	integer : int_size .  (19)

	INT_TYPE  shift 29
	ident  reduce 19
	'*'  reduce 19
	')'  reduce 19


state 17
	program : program scalar_decl .  (2)

	.  reduce 2


state 18
	program : program array_decl .  (3)

	.  reduce 3


state 19
	program : program func_decl .  (4)

	.  reduce 4


state 20
	type : CONST non_const .  (7)

	.  reduce 7


state 21
	non_const : SIGNED integer .  (14)

	.  reduce 14


state 22
	non_const : UNSIGNED integer .  (15)

	.  reduce 15


state 23
	single_ident : ident . '=' expression  (26)
	single_ident : ident .  (27)
	single_array : ident . array_shape  (32)
	single_array : ident . array_shape '=' arr_content  (33)
	func_decl : type ident . func_cfg ';'  (41)

	'='  shift 30
	'['  shift 31
	'('  shift 32
	';'  reduce 27
	','  reduce 27

	array_shape  goto 33
	func_cfg  goto 34


state 24
	single_ident : '*' . ident  (28)
	func_decl : type '*' . ident func_cfg ';'  (42)

	ident  shift 35
	.  error


state 25
	scalar_decl : type idents . ';'  (5)

	';'  shift 36
	.  error


state 26
	idents : single_ident .  (24)
	idents : single_ident . ',' idents  (25)

	','  shift 37
	';'  reduce 24


state 27
	array_decl : type arrays . ';'  (29)

	';'  shift 38
	.  error


state 28
	arrays : single_array .  (30)
	arrays : single_array . ',' arrays  (31)

	','  shift 39
	';'  reduce 30


state 29
	integer : int_size INT_TYPE .  (17)

	.  reduce 17


state 30
	single_ident : ident '=' . expression  (26)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 54


state 31
	array_shape : '[' . expression ']'  (34)
	array_shape : '[' . expression ']' array_shape  (35)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 55


state 32
	func_cfg : '(' . paras ')'  (43)
	func_cfg : '(' . ')'  (44)

	SHORT_TYPE  shift 2
	INT_TYPE  shift 3
	LONG_TYPE  shift 4
	LONGLONG_TYPE  shift 5
	FLOAT_TYPE  shift 6
	DOUBLE_TYPE  shift 7
	VOID_TYPE  shift 8
	CHAR_TYPE  shift 9
	CONST  shift 10
	SIGNED  shift 11
	UNSIGNED  shift 12
	')'  shift 56
	.  error

	type  goto 57
	non_const  goto 14
	integer  goto 15
	int_size  goto 16
	paras  goto 58


state 33
	single_array : ident array_shape .  (32)
	single_array : ident array_shape . '=' arr_content  (33)

	'='  shift 59
	';'  reduce 32
	','  reduce 32


state 34
	func_decl : type ident func_cfg . ';'  (41)

	';'  shift 60
	.  error


state 35
	single_ident : '*' ident .  (28)
	func_decl : type '*' ident . func_cfg ';'  (42)

	'('  shift 32
	';'  reduce 28
	','  reduce 28

	func_cfg  goto 61


state 36
	scalar_decl : type idents ';' .  (5)

	.  reduce 5


state 37
	idents : single_ident ',' . idents  (25)

	ident  shift 62
	'*'  shift 63
	.  error

	idents  goto 64
	single_ident  goto 26


state 38
	array_decl : type arrays ';' .  (29)

	.  reduce 29


state 39
	arrays : single_array ',' . arrays  (31)

	ident  shift 65
	.  error

	arrays  goto 66
	single_array  goto 28


state 40
	expression : NUM .  (84)

	.  reduce 84


state 41
	expression : FLOAT .  (85)

	.  reduce 85


state 42
	expression : CHAR_LIT .  (86)

	.  reduce 86


state 43
	expression : STRING_LIT .  (87)

	.  reduce 87


state 44
	expression : ident . func_arg  (79)
	expression : ident . array_shape  (80)
	expression : ident .  (88)

	'['  shift 31
	'('  shift 67
	INC  reduce 88
	DEC  reduce 88
	LAND  reduce 88
	LOR  reduce 88
	'|'  reduce 88
	'^'  reduce 88
	'&'  reduce 88
	EQ  reduce 88
	NEQ  reduce 88
	'<'  reduce 88
	'>'  reduce 88
	GE  reduce 88
	LE  reduce 88
	LSHIFT  reduce 88
	RSHIFT  reduce 88
	'+'  reduce 88
	'-'  reduce 88
	'*'  reduce 88
	'/'  reduce 88
	'%'  reduce 88
	';'  reduce 88
	','  reduce 88
	']'  reduce 88
	'}'  reduce 88
	')'  reduce 88

	array_shape  goto 68
	func_arg  goto 69


state 45
	expression : INC . expression  (73)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 70


state 46
	expression : DEC . expression  (74)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 71


state 47
	expression : '&' . ident  (78)

	ident  shift 72
	.  error


state 48
	expression : '+' . expression  (71)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 73


state 49
	expression : '-' . expression  (72)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 74


state 50
	expression : '*' . expression  (77)

	NUM  shift 40
	FLOAT  shift 41
	CHAR_LIT  shift 42
	STRING_LIT  shift 43
	ident  shift 44
	INC  shift 45
	DEC  shift 46
	'&'  shift 47
	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'('  shift 51
	'!'  shift 52
	'~'  shift 53
	.  error

	expression  goto 75


state 51
	expression : '(' . type ')' expression  (81)
	expression : '(' . expression ')'  (89)
